; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_lookup.c_test_refs_lookup__with_resolve.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_lookup.c_test_refs_lookup__with_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"HEAD_TRACKER\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_lookup__with_resolve() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_reference_lookup(i32** %3, i32 %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @git_reference_resolve(i32** %1, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @git_reference_free(i32* %10)
  %12 = load i32, i32* @g_repo, align 4
  %13 = call i32 @git_reference_lookup_resolved(i32** %2, i32 %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 5)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i64 @git_reference_cmp(i32* %15, i32* %16)
  %18 = icmp eq i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @cl_assert(i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  %23 = load i32, i32* @g_repo, align 4
  %24 = call i32 @git_reference_lookup_resolved(i32** %2, i32 %23, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 5)
  %25 = call i32 @cl_git_pass(i32 %24)
  %26 = load i32*, i32** %1, align 8
  %27 = load i32*, i32** %2, align 8
  %28 = call i64 @git_reference_cmp(i32* %26, i32* %27)
  %29 = icmp eq i64 %28, 0
  %30 = zext i1 %29 to i32
  %31 = call i32 @cl_assert(i32 %30)
  %32 = load i32*, i32** %2, align 8
  %33 = call i32 @git_reference_free(i32* %32)
  %34 = load i32*, i32** %1, align 8
  %35 = call i32 @git_reference_free(i32* %34)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_reference_resolve(i32**, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_reference_lookup_resolved(i32**, i32, i8*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_reference_cmp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
